--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ynov.findme">
-
     <!-- All permissions: LOCATION AND INTERNET -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_logo_findme"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_logo_findme"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindMe">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ToolbarActivity" />
-        <activity android:name=".SearchType"    android:label="@string/title_activity_search"   />
-        <activity android:name=".MapsActivity"  android:label="@string/title_activity_maps"     />
-        <activity android:name=".OtherActivity" android:label="@string/title_activity_other"    />
-        <activity android:name=".DetailsGare"   android:theme="@style/Theme.AppCompat.Translucent" />
-
-
+        <activity
+            android:name=".SearchType"
+            android:label="@string/title_activity_search" />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".OtherActivity"
+            android:label="@string/title_activity_other" />
+        <activity
+            android:name=".DetailsGare"
+            android:theme="@style/Theme.AppCompat.Translucent" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -40,6 +40,10 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 </manifest>
