--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ynov.findme">
-    <!-- All permissions: LOCATION AND INTERNET -->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo_findme"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_logo_findme"
+        android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindMe">
         <activity android:name=".MainActivity">
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".ToolbarActivity" />
         <activity
-            android:name=".SearchType"
+            android:name=".SearchTypeActivity"
             android:label="@string/title_activity_search" />
         <activity
             android:name=".MapsActivity"
@@ -41,9 +41,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
     </application>
+    <!-- All permissions: LOCATION AND INTERNET -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
