--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindMe">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,21 +20,21 @@
             </intent-filter>
         </activity>
         <activity android:name=".ToolbarActivity" />
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".ui.home.HomeActivity" />
         <activity
-            android:name=".SearchTypeActivity"
+            android:name=".ui.listing.SearchTypeActivity"
             android:label="@string/title_activity_search" />
         <activity
-            android:name=".SearchObjectActivity"
+            android:name=".ui.listing.SearchObjectActivity"
             android:label="@string/title_activity_search_object" />
         <activity
-            android:name=".MapsActivity"
+            android:name=".ui.maps.MapsActivity"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name=".OtherActivity"
+            android:name=".ui.home.OtherActivity"
             android:label="@string/title_activity_other" />
         <activity
-            android:name=".DetailsGare"
+            android:name=".ui.listing.DetailsGare"
             android:theme="@style/Theme.AppCompat.Translucent" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -47,8 +47,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-        <activity android:name=".SelectObjectActivity"/>
-        <activity android:name=".MapTrackActivity" />
+        <activity android:name=".ui.listing.SelectObjectActivity"/>
+        <activity android:name=".ui.maps.MapTrackActivity" />
     </application>
 
 
